\preformatted{
> v<-c(3L,1000000000L:1010000000L,-(1000000000L:1010000000L))
> sum(v)
[1] 4629
}
            Also fixed a related bug in \code{mean}, applied to an integer
            vector, which would arise only on a system where a long double 
            is no bigger than a double.
      \item **17
      \item Fixed a bug where more than six warning messages at startup
            would overwrite random memory, causing garbage output 
            and perhaps arbitrarily bizarre behaviour.
      \item Fixed a bug where LC_PAPER was not correctly set at startup.
      \item **20
      \item Fixed gc.time, which was producing grossly incorrect values
            for user and system time.
      \item **22
      \item **23
      \item **24
      \item Fixed a bug where excess warning messages may be produced
            on conversion to RAW.  For instance:
\preformatted{
  > as.raw(1e40)
  [1] 00
  Warning messages:
  1: NAs introduced by coercion 
  2: out-of-range values treated as 0 in coercion to raw 
}
            Now, only the second warning message is produced.
      \item **26
      \item **27
      \item **28
      \item **29
      \item **30
      \item **31
      \item **32
      \item Fixed a bug in which \code{Im(matrix(complex(0),3,4))} returned
            a matrix of zero elements rather than a matrix of NA elements.
      \item **34
      \item Fixed a bug illustrated by the following:
\preformatted{
> library(compiler)
> foo <- function(x,y) UseMethod("foo")
> foo.numeric <- function(x,y) "numeric"
> foo.default <- function(x,y) "default"
> testi <- function () foo(x=NULL,2)
> testc <- cmpfun (function () foo(x=NULL,2))
> testi() 
[1] "default"
> testc()
[1] "numeric"
}
      \item **36
      \item **37
      \item **38
      \item **39
      \item **40
      \item **41
      \item **42
      \item **43
      \item **44
      \item **45
      \item **46
      \item **47
      \item **48
      \item **49
      \item **50
    }
  }
}