@@ -1,0 +1,3 @@
+Sped up "apply" in the common case where it is applied to a matrix.
+Also clarified the documentation and fixed a bug, as described in
+NEWS.
